--- a/app/templates/visitor/hotels.html
+++ b/app/templates/visitor/hotels.html
@@ -11,9 +11,16 @@
          
     <div class="mini-card-hotel">
         <div class="image">
-            <img src="{% static 'assets/hotel.png' %}" alt="image-hotel">
+            <img src="{% static "assets/hotels/"%}{{ hotel.imagehotel_set.first.id_images.path_image }}" alt="">
+            {% comment %} pour ceci il faut remplacer le voyage par hotel pour les likes  {% endcomment %}
             <span class="reaction">
-                <img id="heart" src="{% static 'assets/like-empty.svg' %}" onclick="toggleLike(this)">
+                <img class="heart" src="#" data-voyage="{{ avoir_instance.id_voyage.id_voyage }}" id="{{ avoir_instance.id_voyage.id_voyage }}" onclick="toggleLike(this)">
+                <form>
+                    {% csrf_token %}
+                    <input type="hidden" name="id_user" value=1>
+                    <input type="hidden" name="id_voyage" value={{ avoir_instance.id_voyage.id_voyage }}>
+                    <input type="hidden" name="inputLike" value="#">
+                </form>
             </span>
         </div>
         <div class="body">
