--- a/app/templates/visitor/special_asie_details.html
+++ b/app/templates/visitor/special_asie_details.html
@@ -173,7 +173,7 @@
 
             //Perform an asynchronous POST request to your backend
             //Perform an asynchronous POST request to your backend
-            fetch('/special_asie/details/comments/', {
+            fetch('/comments/retrieve/', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
