--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -384,13 +384,6 @@
     {% block js_block %} {% endblock %} 
     <script src="{% static 'js/base.js' %}" type="text/javascript"></script>
     <script>
-        {% comment %} function toggleLike(heart) {
-            if (heart.src.includes('{% static "assets/like-full.svg" %}')) {
-                heart.src = '{% static "assets/like-empty.svg" %}';
-            } else {
-                heart.src = '{% static "assets/like-full.svg" %}';
-            }
-        } {% endcomment %}
 
         // Open the full screen search box
         function openSearch() {
@@ -434,7 +427,7 @@
         function fetchLikes(voyageId) {
             const formData = { id_user: 1, id_voyage: voyageId };
             const csrfToken = getCSRFToken();
-            fetch('/special_asie/like/', {
+            fetch('/likes/retrieve/', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
@@ -474,7 +467,7 @@
             const formData = { id_user: 1, id_voyage: voyageId };
             const csrfToken = getCSRFToken();
     
-            const endpoint = isLiked ? '/special_asie/delete/' : '/special_asie/add/';
+            const endpoint = isLiked ? '/likes/delete/' : '/likes/add/';
     
             fetch(endpoint, {
                 method: 'POST',
