--- a/app/templates/admin_pages/hotels_gestion.html
+++ b/app/templates/admin_pages/hotels_gestion.html
@@ -25,17 +25,34 @@
                     <td>{{hotel.type_chambre}} </td> 
                     <td>{{hotel.n_chambreDispo}} </td> 
                     <td>{{hotel.petit_dejeuner}} </td> 
-                    <td><button>Supprimer</button><button>Modifier</button></td>
+                    <td><button><a href="{% url 'supp_hotel' hotel.id_hotel%}">Supprimer</a></button><button><a href="{% url 'modif_hotel' hotel.id_hotel%}"> Modifier</a></button></td>
                 </tr>
-
                 {% endfor %}
             </tbody>
         </table>
     </div>
-    <form action="{% url 'villes_gestion' %}" method="POST">
+{% if messageSupp %}
+    <p style="color: red;">{{ messageSupp }}</p>
+{% endif %}
+{% if messageEdit %}
+    <p style="color: green;">{{ messageEdit }}</p>
+{% endif %}
+
+{% if form_modif %}
+    <form action="{% url 'modif_hotel' hotel.id_hotel%}" method="POST">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">ajouter</button>
+        {{ form_modif.as_p }}
+        <button type="submit">Enregistré</button>
     </form>
+
+{% elif form_ajout %}
+<form action="{% url 'ajout_hotel'%}" method="POST">
+    {% csrf_token %}
+    {{ form_ajout.as_p }}
+    <button type="submit">Enregistré</button>
+</form>
+{% else %}
+    <button type="submit"><a href="{% url 'ajout_hotel'%}">ajouter</a></button>
+{% endif %}
 </div>
 {% endblock main %}
