--- a/app/templates/admin_pages/notifications_gestion.html
+++ b/app/templates/admin_pages/notifications_gestion.html
@@ -25,10 +25,28 @@
             </tbody>
         </table>
     </div>
-    <form action="{% url 'notifications_gestion' %}" method="POST">
+    {% if messageSupp %}
+    <p style="color: red;">{{ messageSupp }}</p>
+{% endif %}
+{% if messageEdit %}
+    <p style="color: green;">{{ messageEdit }}</p>
+{% endif %}
+
+{% if form_modif %}
+    <form action="{% url 'modif_vol' vol.id_vol%}" method="POST">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">ajouter</button>
+        {{ form_modif.as_p }}
+        <button type="submit">Enregistré</button>
     </form>
+  
+{% elif form_ajout %}
+<form action="{% url 'ajout_vol'%}" method="POST">
+    {% csrf_token %}
+    {{ form_ajout.as_p }}
+    <button type="submit">Enregistré</button>
+</form>
+{% else %}
+    <button type="submit"><a href="{% url 'ajout_vol'%}">ajouter</a></button>
+{% endif %}
 </div>
 {% endblock main %}
