--- a/app/templates/admin_pages/promotions_gestion.html
+++ b/app/templates/admin_pages/promotions_gestion.html
@@ -18,20 +18,40 @@
                 {%for promotion in promotions%}
                 <tr>
                     <td>{{promotion.id_promotion}} </td> 
-                    <td>{{promotion.date_d_promo}} </td> 
-                    <td>{{promotion.date_f_promo}} </td> 
+                    <td>{{promotion.date_d_promo}}, {{promotion.heure_d_promos}} </td> 
+                    <td>{{promotion.date_f_promo}}, {{promotion.heure_f_promos}}</td> 
                     <td>{{promotion.pourcentage}} </td> 
-                    <td><button>Supprimer</button><button>Modifier</button></td>
+                    <td><button><a href="{% url 'supp_promotion' promotion.id_promotion%}">Supprimer</a></button><button><a href="{% url 'modif_promotion' promotion.id_promotion%}"> Modifier</a></button></td>
+
                 </tr>
 
                 {% endfor %}
             </tbody>
         </table>
     </div>
-    <form action="{% url 'villes_gestion' %}" method="POST">
+   
+{% if messageSupp %}
+    <p style="color: red;">{{ messageSupp }}</p>
+{% endif %}
+{% if messageEdit %}
+    <p style="color: green;">{{ messageEdit }}</p>
+{% endif %}
+
+{% if form_modif %}
+    <form action="{% url 'modif_promotion' promotion.id_promotion%}" method="POST">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">ajouter</button>
+        {{ form_modif.as_p }}
+        <button type="submit">Enregistré</button>
     </form>
+  
+{% elif form_ajout %}
+<form action="{% url 'ajout_promotion'%}" method="POST">
+    {% csrf_token %}
+    {{ form_ajout.as_p }}
+    <button type="submit">Enregistré</button>
+</form>
+{% else %}
+    <button type="submit"><a href="{% url 'ajout_promotion'%}">ajouter</a></button>
+{% endif %}
 </div>
 {% endblock main %}
