--- a/app/templates/admin_pages/villes_gestion.html
+++ b/app/templates/admin_pages/villes_gestion.html
@@ -19,17 +19,34 @@
                     <td>{{v.id_ville}} </td> 
                     <td>{{v.nom_ville}} </td> 
                     <td>{{v.id_pays.nom_pays}} </td> 
-                    <td><button>editer</button> <button>supprimer</button></td>
+                    <td><button><a href="{% url 'supp_ville' v.id_ville%}">supprimer</a></button></td>
                 </tr>
-
                 {% endfor %}
             </tbody>
         </table>
     </div>
-    <form action="{% url 'villes_gestion' %}" method="POST">
+{% if messageSupp %}
+    <p style="color: red;">{{ messageSupp }}</p>
+{% endif %}
+{% if messageEdit %}
+    <p style="color: green;">{{ messageEdit }}</p>
+{% endif %}
+
+{% if form_modif %}
+    <form action="{% url 'modif_ville' ville.id_ville%}" method="POST">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">ajouter</button>
+        {{ form_modif.as_p }}
+        <button type="submit">Enregistré</button>
     </form>
+  
+{% elif form_ajout %}
+<form action="{% url 'ajout_ville'%}" method="POST">
+    {% csrf_token %}
+    {{ form_ajout.as_p }}
+    <button type="submit">Enregistré</button>
+</form>
+{% else %}
+    <button type="submit"><a href="{% url 'ajout_ville'%}">ajouter</a></button>
+{% endif %}
 </div>
 {% endblock main %}
