--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %} {% endblock %}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="icon" href="{% static "assets/travelmor-icon.png" %}">
+    <link rel="icon" href="{% static 'assets/travelmor-icon.png' %}">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <style>
 
@@ -23,7 +23,6 @@
             backdrop-filter: blur(30px);
         }
         
-        /* The content */
         .overlay-content {
             position: relative;
             top: 46%;
@@ -33,7 +32,6 @@
             margin: auto;
         }
         
-        /* Close button */
         .overlay .closebtn {
             position: absolute;
             top: 150px;
@@ -47,7 +45,6 @@
             color: #ccc;
         }
         
-        /* Style the search field */
         .overlay input[type=text] {
             padding: 15px;
             font-size: 17px;
@@ -63,7 +60,6 @@
             background: #f1f1f1;
         }
         
-        /* Style the submit button */
         .overlay button {
             float: left;
             width: 20%;
@@ -81,7 +77,6 @@
         }
 {% comment %} login form modal  {% endcomment %}
 
-          /* Full-width input fields */
         #login-form-modal input[type=text], input[type=password] {
             width: 80%;
             padding: 12px 20px;
@@ -92,7 +87,6 @@
             border-radius: var(--main-border-radius);
         }
 
-        /* Set a style for all buttons */
         #login-form-modal button {
             background-color: var(--main--green);
             color: white;
@@ -112,7 +106,6 @@
             opacity: 0.8;
         }
 
-        /* Extra styles for the cancel button */
         #login-form-modal .cancelbtn {
             width: auto;
             padding: 10px 18px;
@@ -120,7 +113,6 @@
             border-radius: var(--main-border-radius);
         }
 
-        /* Center the image and position the close button */
         #login-form-modal .head {
             text-align: center;
             margin: 24px 0 12px 0;
@@ -156,7 +148,6 @@
             cursor: pointer;
         }
 
-        /* The Modal (background) */
         #login-form-modal {
             display: none; 
             position: fixed; 
@@ -172,7 +163,6 @@
             backdrop-filter: blur(30px);
         }
 
-        /* Modal Content/Box */
         #login-form-modal .modal-content {
             background-color: #fefefe;
             margin: 150px auto; 
@@ -183,7 +173,6 @@
             border-radius: var(--main-border-radius);
         }
 
-        /* The Close Button (x) */
         #login-form-modal .close {
             position: absolute;
             right: 15px;
@@ -200,10 +189,9 @@
             cursor: pointer;
         }
 
-        /* Add Zoom Animation */
         .animate {
             -webkit-animation: animatezoom 0.6s;
-            animation: animatezoom 0.6s
+            animation: animatezoom 0.3s
         }
 
         @-webkit-keyframes animatezoom {
@@ -273,10 +261,10 @@
 
     <div class="container"></div>
 
-    <div id="myOverlay" class="overlay">
+    <div id="myOverlay" class="overlay animate">
         <div class="overlay-content">
         <form action="action_page.php">
-            <input type="text" placeholder="Search.." name="search">
+            <input type="text" placeholder="Essayer 'voyage'.." name="search">
             <button type="submit"><i class="fa fa-search"></i></button>
         </form>
         </div>
@@ -310,10 +298,10 @@
         <section class="Paiement">
             <h3>Paiement securisé</h3>
             <div class="methods">
-                <img src="{% static "assets/visa.png" %}" alt="payment-methode-visa">
-                <img src="{% static "assets/paypal.png" %}" alt="payment-methode-paypal">
-                <img src="{% static "assets/western-union.png" %}" alt="payment-methode-western-union">
-                <img src="{% static "assets/payoneer.png" %}" alt="payment-methode-payoneer">
+                <img src="{% static 'assets/visa.png' %}" alt="payment-methode-visa">
+                <img src="{% static 'assets/paypal.png' %}" alt="payment-methode-paypal">
+                <img src="{% static 'assets/western-union.png' %}" alt="payment-methode-western-union">
+                <img src="{% static 'assets/payoneer.png' %}" alt="payment-methode-payoneer">
             </div>
         </section>
 
@@ -342,24 +330,23 @@
                     <li><a href="#">Conditions Générales de Vente</a></li>
                     <li><a href="#">Partenaires de l'Agence</a></li>
                     <li><a href="#">Voyage en Groupe</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Découvrez des Offres Exclusives</a></li>
                 </ul>
             </nav>
             <nav class="hotel">
                 <ul>
-                    <li><a href="#">Qui somme nous ?</a></li>
+                    <li><a href="#">Autres services</a></li>
                     <li><a href="#">Conditions Générales de Vente</a></li>
                     <li><a href="#">Partenaires de l'Agence</a></li>
-                    <li><a href="#">Voyage en Groupe</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Aider nous a s'agrandir</a></li>
+                    <li><a href="#">Explorez des Destinations Exotiques</a></li>
                 </ul>
             </nav>
             <nav class="voyage">
                 <ul>
-                    <li><a href="#">Qui somme nous ?</a></li>
-                    <li><a href="#">Conditions Générales de Vente</a></li>
+                    <li><a href="#">Sécurité et Confort Assurés</a></li>
                     <li><a href="#">Partenaires de l'Agence</a></li>
-                    <li><a href="#">Voyage en Groupe</a></li>
+                    <li><a href="#">Téléchargez l'Application Aujourd'hui</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
