--- a/app/static/css/detailed_card.css
+++ b/app/static/css/detailed_card.css
@@ -8,9 +8,9 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    box-shadow: 0px 0px 62px -4px rgba(195,195,195,1);
-    -webkit-box-shadow: 0px 0px 62px -4px rgba(195,195,195,1);
-    -moz-box-shadow: 0px 0px 62px -4px rgba(195,195,195,1);
+    box-shadow: 0px 0px 62px -4px rgba(195, 195, 195, 1);
+    -webkit-box-shadow: 0px 0px 62px -4px rgba(195, 195, 195, 1);
+    -moz-box-shadow: 0px 0px 62px -4px rgba(195, 195, 195, 1);
     overflow: hidden;
 }
 
@@ -30,11 +30,11 @@
     width: auto;
     height: 500px;
 }
-  
+
 .detailed-card-voyage .accordion .cursor {
     cursor: pointer;
 }
-  
+
 .detailed-card-voyage .accordion .prev,
 .detailed-card-voyage .accordion .next {
     cursor: pointer;
@@ -50,17 +50,17 @@
     user-select: none;
     -webkit-user-select: none;
 }
-  
+
 .detailed-card-voyage .accordion .next {
     right: 0;
     border-radius: 3px 0 0 3px;
 }
-  
+
 .detailed-card-voyage .accordion .prev:hover,
 .detailed-card-voyage .accordion .next:hover {
     background-color: rgba(0, 0, 0, 0.8);
 }
-  
+
 .detailed-card-voyage .accordion .numbertext {
     color: #f2f2f2;
     font-size: 12px;
@@ -68,7 +68,7 @@
     position: absolute;
     top: 0;
 }
-  
+
 .detailed-card-voyage .accordion .caption-container {
     text-align: center;
     background-color: #222;
@@ -87,16 +87,16 @@
     display: table;
     clear: both;
 }
-  
+
 .detailed-card-voyage .accordion .column {
     float: left;
     width: 16.66%;
 }
-  
+
 .detailed-card-voyage .accordion .demo {
     opacity: 0.6;
 }
-  
+
 .detailed-card-voyage .accordion .active,
 .detailed-card-voyage .accordion .demo:hover {
     opacity: 1;
@@ -151,9 +151,9 @@
     justify-content: center;
     align-items: center;
     margin: 20px 100px;
-    box-shadow: 0px 0px 62px -4px rgba(195,195,195,1);
-    -webkit-box-shadow: 0px 0px 62px -4px rgba(195,195,195,1);
-    -moz-box-shadow: 0px 0px 62px -4px rgba(195,195,195,1);
+    box-shadow: 0px 0px 62px -4px rgba(195, 195, 195, 1);
+    -webkit-box-shadow: 0px 0px 62px -4px rgba(195, 195, 195, 1);
+    -moz-box-shadow: 0px 0px 62px -4px rgba(195, 195, 195, 1);
     padding: 10px;
 }
 
@@ -206,16 +206,16 @@
 #commentForm .add-comment {
     width: 100%;
     height: 70px;
-    resize: none; 
+    resize: none;
     border: none;
     outline: none;
-    padding: 15px ;
-    padding-inline-end: 200px ;
+    padding: 15px;
+    padding-inline-end: 200px;
     align-self: flex-start;
     border-radius: var(--main-border-radius);
-    box-shadow: 0px 0px 62px -4px rgba(195,195,195,1);
-    -webkit-box-shadow: 0px 0px 62px -4px rgba(195,195,195,1);
-    -moz-box-shadow: 0px 0px 62px -4px rgba(195,195,195,1);
+    box-shadow: 0px 0px 62px -4px rgba(195, 195, 195, 1);
+    -webkit-box-shadow: 0px 0px 62px -4px rgba(195, 195, 195, 1);
+    -moz-box-shadow: 0px 0px 62px -4px rgba(195, 195, 195, 1);
 }
 
 #commentForm .add-comment:focus {
@@ -223,7 +223,7 @@
     outline: none;
 }
 
-#commentForm .add-comment + button {
+#commentForm .add-comment+button {
     position: absolute;
     right: 15px;
     top: 22px;
@@ -250,11 +250,10 @@
 
 #commentForm .evaluation-interact .star {
     cursor: pointer;
-    transition: color .2s  ease-in;
+    transition: scale .2s ease-in;
 }
 
 #commentForm .evaluation-interact .star:hover {
-    /* Zoom the star by 1.2 times */
     transform: scale(1.1);
     color: orange;
 }
@@ -267,19 +266,20 @@
     align-items: center;
     margin: 20px auto;
     border-radius: var(--main-border-radius);
-    box-shadow: 0px 0px 62px -4px rgba(195,195,195,1);
-    -webkit-box-shadow: 0px 0px 62px -4px rgba(195,195,195,1);
-    -moz-box-shadow: 0px 0px 62px -4px rgba(195,195,195,1);
+    box-shadow: 0px 0px 62px -4px rgba(195, 195, 195, 1);
+    -webkit-box-shadow: 0px 0px 62px -4px rgba(195, 195, 195, 1);
+    -moz-box-shadow: 0px 0px 62px -4px rgba(195, 195, 195, 1);
     max-width: 800px;
 }
 
 
 .comments .comment {
     display: flex;
-    align-items: center;
+    /* align-items: center; */
+    /* justify-content: center; */
     padding-inline: 15px;
     width: 100%;
-    min-height: 150px;
+    min-height: fit-content;
 }
 
 .comments .comment:not(:last-child) {
@@ -287,14 +287,20 @@
 }
 
 .comments .comment .image-box {
-    width: 100px;
-    height: 100px;
+    width: 110px;
+    height: fit-content;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .comments .comment .image-box img {
-    width: 100%;
-    border: 1px solid black;
+    width: 70px;
+    border: 1px solid var(--second-underline);
     border-radius: 50%;
+    padding: 1px;
 }
 
 .comments .comment .author {
@@ -304,6 +310,7 @@
 .comments .comment .body {
     margin-left: 20px;
     width: 100%;
+    padding: 20px 10px;
 }
 
 .comments .comment .evaluation-time {
