--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,215 +9,214 @@
     <link rel="icon" href="{% static 'assets/travelmor-icon.png' %}">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <style>
-
-
-        .overlay {
-            height: 100%;
-            width: 100%;
-            display: none;
-            position: fixed;
-            z-index: 1;
-            top: 0;
-            left: 0;
-            background-color: rgba(200,200,200,  0.7); /* Black with a little bit see-through */
-            backdrop-filter: blur(30px);
-        }
-        
-        .overlay-content {
-            position: relative;
-            top: 46%;
-            width: 80%;
-            text-align: center;
-            margin-top: 30px;
-            margin: auto;
-        }
-        
-        .overlay .closebtn {
-            position: absolute;
-            top: 150px;
-            right: 45px;
-            font-size: 60px;
-            cursor: pointer;
-            color: white;    
-        }
-        
-        .overlay .closebtn:hover {
-            color: #ccc;
-        }
-        
-        .overlay input[type=text] {
-            padding: 15px;
-            font-size: 17px;
-            border: none;
-            float: left;
-            width: 80%;
-            background: white;
-            border-top-left-radius: var(--main-border-radius);
-            border-bottom-left-radius: var(--main-border-radius);
-        }
-        
-        .overlay input[type=text]:hover {
-            background: #f1f1f1;
-        }
-        
-        .overlay button {
-            float: left;
-            width: 20%;
-            padding: 15px;
-            background: #ddd;
-            font-size: 17px;
-            border: none;
-            cursor: pointer;
-            border-top-right-radius: var(--main-border-radius);
-            border-bottom-right-radius: var(--main-border-radius);
-        }
-        
-        .overlay button:hover {
-            background: #bbb;
-        }
+    .overlay {
+        height: 100%;
+        width: 100%;
+        display: none;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        background-color: rgba(200,200,200,  0.7); /* Black with a little bit see-through */
+        backdrop-filter: blur(30px);
+    }
+    
+    .overlay-content {
+        position: relative;
+        top: 46%;
+        width: 80%;
+        text-align: center;
+        margin-top: 30px;
+        margin: auto;
+    }
+    
+    .overlay .closebtn {
+        position: absolute;
+        top: 150px;
+        right: 45px;
+        font-size: 60px;
+        cursor: pointer;
+        color: white;    
+    }
+    
+    .overlay .closebtn:hover {
+        color: #ccc;
+    }
+    
+    .overlay input[type=text] {
+        padding: 15px;
+        font-size: 17px;
+        border: none;
+        float: left;
+        width: 80%;
+        background: white;
+        border-top-left-radius: var(--main-border-radius);
+        border-bottom-left-radius: var(--main-border-radius);
+    }
+    
+    .overlay input[type=text]:hover {
+        background: #f1f1f1;
+    }
+    
+    .overlay button {
+        float: left;
+        width: 20%;
+        padding: 15px;
+        background: #ddd;
+        font-size: 17px;
+        border: none;
+        cursor: pointer;
+        border-top-right-radius: var(--main-border-radius);
+        border-bottom-right-radius: var(--main-border-radius);
+    }
+    
+    .overlay button:hover {
+        background: #bbb;
+    }
 {% comment %} login form modal  {% endcomment %}
 
-        #login-form-modal input[type=text], input[type=password] {
-            width: 80%;
-            padding: 12px 20px;
-            margin: 0 auto;
-            display: inline-block;
-            border: 1px solid #ccc;
-            box-sizing: border-box;
-            border-radius: var(--main-border-radius);
-        }
+    #login-form-modal input[type=email], input[type=password] {
+        width: 80%;
+        padding: 12px 20px;
+        margin: 0 auto;
+        display: inline-block;
+        border: 1px solid #ccc;
+        box-sizing: border-box;
+        border-radius: var(--main-border-radius);
+    }
 
-        #login-form-modal button {
-            background-color: var(--main--green);
-            color: white;
-            padding: 14px 20px;
-            border: none;
-            cursor: pointer;
-            width: 20%;
-            margin: auto;
-            border-radius: var(--main-border-radius);
-        }
+    #login-form-modal button {
+        background-color: var(--main--green);
+        color: white;
+        padding: 14px 20px;
+        border: none;
+        cursor: pointer;
+        width: 20%;
+        margin: auto;
+        border-radius: var(--main-border-radius);
+    }
 
-        #login-form-modal .under-container-login button {
-            margin: 0;
-        }
+    #login-form-modal .under-container-login button {
+        margin: 0;
+    }
 
-        button:hover {
-            opacity: 0.8;
-        }
+    button:hover {
+        opacity: 0.8;
+    }
 
-        #login-form-modal .cancelbtn {
-            width: auto;
-            padding: 10px 18px;
-            background-color: #f44336;
-            border-radius: var(--main-border-radius);
-        }
+    #login-form-modal .cancelbtn {
+        width: auto;
+        padding: 10px 18px;
+        background-color: #f44336;
+        border-radius: var(--main-border-radius);
+    }
 
-        #login-form-modal .head {
-            text-align: center;
-            margin: 24px 0 12px 0;
-            position: relative;
-        }
+    #login-form-modal .head {
+        text-align: center;
+        margin: 24px 0 12px 0;
+        position: relative;
+    }
 
-        #login-form-modal img.avatar {
-            width: 40%;
-            border-radius: 50%;
-        }
+    #login-form-modal img.avatar {
+        width: 40%;
+        border-radius: 50%;
+    }
 
-        #login-form-modal .container-login { 
-            margin-top:40px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: flex-start; 
-            gap: 20px;
-            border-radius: var(--main-border-radius);
-        }
+    #login-form-modal .container-login { 
+        margin-top:40px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start; 
+        gap: 20px;
+        border-radius: var(--main-border-radius);
+    }
 
-        #login-form-modal .under-container-login {
-            margin-top: 20px;
-            padding: 8px 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            border-radius: var(--main-border-radius);
-        }
+    #login-form-modal .under-container-login {
+        margin-top: 20px;
+        padding: 8px 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-radius: var(--main-border-radius);
+    }
 
-        #login-form-modal span.psw a {
-            text-decoration: none;
-            cursor: pointer;
-        }
+    #login-form-modal span.psw a {
+        text-decoration: none;
+        cursor: pointer;
+    }
 
-        #login-form-modal {
-            display: none; 
-            position: fixed; 
-            z-index: 1; 
-            left: 0;
-            top: 0;
-            width: 100%; 
-            height: 100%; 
-            overflow: hidden; 
-            background-color: rgb(0,0,0); 
-            background-color: rgba(0,0,0,0.4);
-            padding-top: 60px;
-            backdrop-filter: blur(30px);
-        }
+    #login-form-modal {
+        display: none; 
+        position: fixed; 
+        z-index: 1; 
+        left: 0;
+        top: 0;
+        width: 100%; 
+        height: 100%; 
+        overflow: hidden; 
+        background-color: rgb(0,0,0); 
+        background-color: rgba(0,0,0,0.4);
+        padding-top: 60px;
+        backdrop-filter: blur(30px);
+    }
 
+    #login-form-modal .modal-content {
+        background-color: #fefefe;
+        margin: 150px auto; 
+        border: 1px solid #888;
+        width: 50%; 
+        height: fit-content;
+        padding: 30px;
+        border-radius: var(--main-border-radius);
+    }
+
+    #login-form-modal .close {
+        position: absolute;
+        right: 15px;
+        top: -30px;
+        color: #000;
+        font-size: 35px;
+        font-weight: bold;
+        transition: all .2s ease;
+    }
+
+    #login-form-modal .close:hover,
+    #login-form-modal .close:focus {
+        color: red;
+        cursor: pointer;
+    }
+
+    .animate {
+        -webkit-animation: animatezoom 0.6s;
+        animation: animatezoom 0.3s
+    }
+
+    @-webkit-keyframes animatezoom {
+        from {-webkit-transform: scale(0)} 
+        to {-webkit-transform: scale(1)}
+    }
+    
+    @keyframes animatezoom {
+        from {transform: scale(0)} 
+        to {transform: scale(1)}
+    }
+
+    /* Change styles for span and cancel button on extra small screens */
+    @media screen and (max-width: 300px) {
+        span.psw {
+            display: block;
+            float: none;
+        }
+        .cancelbtn {
+            width: 100%;
+        } 
         #login-form-modal .modal-content {
-            background-color: #fefefe;
-            margin: 150px auto; 
-            border: 1px solid #888;
-            width: 50%; 
-            height: fit-content;
-            padding: 30px;
-            border-radius: var(--main-border-radius);
+            width: 100%;
         }
-
-        #login-form-modal .close {
-            position: absolute;
-            right: 15px;
-            top: -30px;
-            color: #000;
-            font-size: 35px;
-            font-weight: bold;
-            transition: all .2s ease;
-        }
-
-        #login-form-modal .close:hover,
-        #login-form-modal .close:focus {
-            color: red;
-            cursor: pointer;
-        }
-
-        .animate {
-            -webkit-animation: animatezoom 0.6s;
-            animation: animatezoom 0.3s
-        }
-
-        @-webkit-keyframes animatezoom {
-            from {-webkit-transform: scale(0)} 
-            to {-webkit-transform: scale(1)}
-        }
-        
-        @keyframes animatezoom {
-            from {transform: scale(0)} 
-            to {transform: scale(1)}
-        }
-
-        /* Change styles for span and cancel button on extra small screens */
-        @media screen and (max-width: 300px) {
-            span.psw {
-                display: block;
-                float: none;
-            }
-            .cancelbtn {
-                width: 100%;
-            } 
-            #login-form-modal .modal-content {
-                width: 100%;
-            }
-        }
+    }
     </style>
+    
     {% block block_css %}{% endblock block_css %}
 </head>
 <body>
@@ -230,18 +229,7 @@
                 <input type="text" name="search" placeholder="Recherche">
                 <span><i class="fa-solid fa-magnifying-glass"></i></span>
             </div>
-            <div class="log" id="LogMenuButton">
-                <i class="fa-solid fa-bars"></i>
-                <i class="fa-solid fa-circle-user"></i>
-                <div class="menu hide" id="LogMenu">
-                    <ul>
-                        <li><a href="#">Inscription</a></li>
-                        <li><a href="#" onclick="document.getElementById('login-form-modal').style.display='block'">Connexion</a></li>
-                        <li><a href="#">Cartes cadeaux</a></li>
-                        <li><a href="#">Centre d'aide</a></li>
-                    </ul>
-                </div>
-            </div>
+            {% block menu_per_log_case %}{% endblock menu_per_log_case %}
         </div>
         <div class="inner2">
             <nav>
@@ -401,9 +389,15 @@
     </script>
 
     <script defer>
+        {% if request.session.code_session %}
+            id_user = {{ request.session.code_session }};
+        {% else %}
+            id_user = false; 
+        {% endif %}
+
         const hearts = document.querySelectorAll('.heart');
         const inputLike = document.querySelector('input[name="inputLike"]');
-    // on veut utiliser data- of script pour passer la valeur id_user au script
+
         function getCSRFToken() {
             const csrfCookie = document.cookie.split(';').find(cookie => cookie.trim().startsWith('csrftoken='));
             if (csrfCookie) {
@@ -413,7 +407,7 @@
         }
     
         function fetchLikes(voyageId) {
-            const formData = { id_user: 1, id_voyage: voyageId };
+            const formData = { id_user: parseInt(id_user), id_voyage: voyageId };
             const csrfToken = getCSRFToken();
             fetch('/likes/retrieve/', {
                 method: 'POST',
@@ -439,32 +433,40 @@
         }
     
         document.addEventListener('DOMContentLoaded', function () {
+            if(!id_user){
+            //console.log('you are not connected');
+            //document.getElementById('login-form-modal').style.display='block';
+            }else {
             hearts.forEach(heart => {
                 const voyageId = heart.id;
                 fetchLikes(voyageId);
                 console.log(heart.id);
-    
-            });
+            });    
+            }
         });
     
         function toggleLike(heart) {
-            const voyageId = heart.id;
-            console.log('toggle: ' + inputLike.value);
-            const isLiked = inputLike.value === 'true';
-    
-            const formData = { id_user: 1, id_voyage: voyageId };
-            const csrfToken = getCSRFToken();
-    
-            const endpoint = isLiked ? '/likes/delete/' : '/likes/add/';
-    
-            fetch(endpoint, {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                    'X-CSRFToken': csrfToken,
-                },
-                body: JSON.stringify(formData),
-            })
+            if(!id_user){
+                console.log('you are not connected');
+                document.getElementById('login-form-modal').style.display='block';
+            }else {
+                const voyageId = heart.id;
+                console.log('toggle: ' + inputLike.value);
+                const isLiked = inputLike.value === 'true';
+        
+                const formData = { id_user: parseInt(id_user), id_voyage: voyageId };
+                const csrfToken = getCSRFToken();
+        
+                const endpoint = isLiked ? '/likes/delete/' : '/likes/add/';
+        
+                fetch(endpoint, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'X-CSRFToken': csrfToken,
+                    },
+                    body: JSON.stringify(formData),
+                })
                 .then(response => response.json())
                 .then(data => {
                     data = JSON.parse(data);
@@ -472,6 +474,7 @@
                     heart.src = updatedIsLiked ? '{% static "assets/like-full.svg" %}' : '{% static "assets/like-empty.svg" %}';
                     inputLike.value = updatedIsLiked ? 'true' : 'false';
                 });
+            }    
         }
     </script>
 </body>
